german translation improvement

--- a/src/main/resources/hudson/plugins/sloccount/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages_de.properties
@@ -3,3 +3,8 @@ Sloccount.Publisher.Name=Anzeige der SLOCCount Analyseergebnisse
 Sloccount.ProjectAction.Name=SLOCCount
 
 Sloccount.Trend.Name=SLOCCount Trend
+
+Sloccount.ReportSummary.Lines=Quelltext-Zeilen
+Sloccount.ReportSummary.Files=Dateien
+Sloccount.ReportSummary.and=und
+Sloccount.ReportSummary.Languages=Sprachen
