--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -3,3 +3,8 @@ Sloccount.Publisher.Name=Publish SLOCCount analysis results
 Sloccount.ProjectAction.Name=SLOCCount
 
 Sloccount.Trend.Name=SLOCCount Trend
+
+Sloccount.ReportSummary.Lines=lines of code
+Sloccount.ReportSummary.Files=files
+Sloccount.ReportSummary.and=and
+Sloccount.ReportSummary.Languages=languages
