JENKINS-20646 Summary is missing for the first build
- The build summary was displayed only if both current and previous reports were not null. Only current report should be tested at top-level, test of previous report is relevant only while processing the differences.
- Hardcoded "in" string on summary page added to localication Messages (English only).

- Create a new project.
- Process a first build.
- Show its summary.
- Verify the summary contains valid text.
- Process a second build.
- Show its summary.
- Verify the summary contains valid text.
- All tests passed.

--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -7,4 +7,5 @@ Sloccount.Trend.Name=SLOCCount Trend
 Sloccount.ReportSummary.Lines=lines of code
 Sloccount.ReportSummary.Files=files
 Sloccount.ReportSummary.and=and
+Sloccount.ReportSummary.in=in
 Sloccount.ReportSummary.Languages=languages
