[JENKINS-14504] sloccount churn graph
- Trend graph with values computed as delta between builds N and N-1 implemented.
- SLOCCount plugin now displays two graphs: absolute and delta.
- Indentation fixed.

--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -9,3 +9,5 @@ Sloccount.ReportSummary.Files=files
 Sloccount.ReportSummary.and=and
 Sloccount.ReportSummary.in=in
 Sloccount.ReportSummary.Languages=languages
+
+Sloccount.Trend.Delta=(delta)
