--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -3,11 +3,5 @@ Sloccount.Publisher.Name=Publish SLOCCount analysis results
 Sloccount.ProjectAction.Name=SLOCCount
 
 Sloccount.Trend.Name=SLOCCount Trend
-
-Sloccount.ReportSummary.Lines=lines of code
-Sloccount.ReportSummary.Files=files
-Sloccount.ReportSummary.and=and
-Sloccount.ReportSummary.in=in
-Sloccount.ReportSummary.Languages=languages
-
+Sloccount.Trend.Lines=lines
 Sloccount.Trend.Delta=(delta)
