[JENKINS-6876] Create a dash-board view portlet that shows the SLOC of the selected projectes [JENKINS-12166] add a sloccount portlet to dashboard
- Optional dependency to dashboard-view added.
- SLOCCount dashboard-view portlet implemented. It displays a sortable table with number of lines, files and languages for each job.
- Programming language specific data were not added to the table because there can be many of them which would break the layout. The [job x language] table would have both many rows and many columns.
- Germal and Japanese localization blindly copied from other jelly files.

--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -5,3 +5,5 @@ Sloccount.ProjectAction.Name=SLOCCount
 Sloccount.Trend.Name=SLOCCount Trend
 Sloccount.Trend.Lines=lines
 Sloccount.Trend.Delta=(delta)
+
+Sloccount.Portlet.Name=SLOCCount
