Default portlet name
- Default portlet name updated from simple "SLOCCount" to "SLOCCount Statistics" to match other plugins.

--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -6,4 +6,4 @@ Sloccount.Trend.Name=SLOCCount Trend
 Sloccount.Trend.Lines=lines
 Sloccount.Trend.Delta=(delta)
 
-Sloccount.Portlet.Name=SLOCCount
+Sloccount.Portlet.Name=SLOCCount Statistics
