[JENKINS-24021] Show statistics from last build on main job page

--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -1,6 +1,6 @@
 Sloccount.Publisher.Name=Publish SLOCCount analysis results
 
-Sloccount.ProjectAction.Name=SLOCCount
+Sloccount.SloccountResults=SLOCCount Results
 
 Sloccount.Trend.Name=SLOCCount Trend
 Sloccount.Trend.Lines=lines
