--- a/src/main/resources/hudson/plugins/sloccount/Messages_de.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages_de.properties
@@ -1,5 +1,5 @@
 Sloccount.Publisher.Name=Anzeige der SLOCCount Analyseergebnisse
 
-Sloccount.ProjectAction.Name=SLOCCount
+Sloccount.SloccountResults=SLOCCount
 
 Sloccount.Trend.Name=SLOCCount Trend
