Graph titles updated.

--- a/src/main/resources/hudson/plugins/sloccount/Messages.properties
+++ b/src/main/resources/hudson/plugins/sloccount/Messages.properties
@@ -3,7 +3,7 @@ Sloccount.Publisher.Name=Publish SLOCCount analysis results
 Sloccount.SloccountResults=SLOCCount Results
 
 Sloccount.Trend.Name=SLOCCount Trend
-Sloccount.Trend.Lines=lines
-Sloccount.Trend.Delta=(delta)
+Sloccount.Trend.LinesTotal=lines total
+Sloccount.Trend.LinesDelta=lines delta
 
 Sloccount.Portlet.Name=SLOCCount Statistics
